[package]
name = "actix-mongo-api"
version = "0.1.0"
authors = ["demola malomo <malomo.alaba@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = "1.0.136"
dotenv = "0.15.0"

[dependencies.mongodb]
version = "2.2.0"
default-features = false
features = ["sync"] 